# animalese

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  components.json  eslint.config.ts  license.md  package.json  prettier.config.ts  readme.md  svelte.config.ts  tsconfig.json  vite.config.ts
.husky/: pre-commit
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  keyboard.rs  lib.rs
src/lib/: layout.ts
src/lib/components/header/: Button.svelte  Header.svelte
src/lib/components/keyboard/: Key.svelte  Keyboard.svelte  index.ts
src/lib/components/ui/button/: button.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
voice/: Cargo.toml
voice/src/: lib.rs  main.rs
