[workspace]
members = ["src-tauri", "voice"]
default-members = ["src-tauri"]
resolver = "3"

[workspace.dependencies]
crossbeam-channel = "0.5.15"
include_dir = "0.7.4"
rdev = "0.5.3"
rodio = { version = "0.21.1", default-features = false }
serde = "1.0.219"
serde_json = "1.0.141"
tauri = "2.7.0"
tauri-build = "2.3.1"
voice = { path = "voice" }

[workspace.package]
version = "0.0.0"
authors = ["newt <hi@newty.dev>"]
edition = "2024"

# we may lose the debugger, but i think it's worth it for the improved dx!
# comment out if you want the debugger
[profile.dev]
debug = 0
strip = "debuginfo"
