[package]
name = "animalese"
version.workspace = true
publish = false
authors.workspace = true
edition.workspace = true

[lib]
name = "animalese_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true, features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rdev = { workspace = true, features = ["serialize"] }
crossbeam-channel = { workspace = true }
rodio = { workspace = true, features = ["playback", "vorbis"] }
voice = { workspace = true }

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.2"
